tests/snapshots/trace_cli__trace_cli@11209015930749815389.snap
---
source: tests/trace_cli.rs
info: set allow_ref_pat_on_ref_mut false
---
allow_ref_pat_on_ref_mut: true -> false
