tests/snapshots/trace_cli__trace_cli@11341798803830890230.snap
---
source: tests/trace_cli.rs
info: set downgrade_shared_inside_shared true
---
downgrade_shared_inside_shared: false -> true

Warning: option `downgrade_shared_inside_shared` is not represented in the rules
