tests/snapshots/trace_cli__trace_cli@11515459865669657874.snap
---
source: tests/trace_cli.rs
info: set ref_binding_on_inherited true
---
Error: unknown variant `true`, expected one of `ResetBindingMode`, `AllocTemporary`, `Error`

Options are:
- rules_display_style: Plain | BindingMode
    how to display typing rules (in the `rules` command)
- match_constructor_through_ref: true | false
    whether `[p]` can match on `&[T]`; the heart of match ergonomics.
- ref_binding_on_inherited: ResetBindingMode | AllocTemporary | Error
    how to handle a `ref x` binding on an inherited reference
- mut_binding_on_inherited: ResetBindingMode | Keep | Error
    how to handle a `mut x` binding on an inherited reference
- inherited_ref_on_ref: EatOuter | EatInner | EatBoth
    how to handle a reference pattern on a double reference when the outer one is inherited
- allow_ref_pat_on_ref_mut: true | false
    whether to allow `&p: &mut T`
- simplify_deref_mut: true | false
    whether to simplify `*&mut expr`, which removes some borrow errors
- eat_inherited_ref_alone: true | false
    whether `&p: &T` is allowed if the reference is inherited and `T` isn't some `&U`
- downgrade_mut_inside_shared: true | false
    RFC3627 rule 3: downgrade `&mut` inherited references to `&` inside a shared deref

There also exist some predefined option-bundles. Activate one with `set <bundle>`
- default: the default settings; a reasonable proposal
- stateless: a proposal that tracks no hidden state; purely type-based
- stable_rust: emulates the behavior of current stable rust
- ergo2024: the accepted RFC3627 behavior
- rfc3627_2021: (TODO) the accepted RFC3627 behavior under edition 2021
- ergo2024_breaking_only: (TODO) the breaking changes for edition 2024 planned in RFC3627
- structural: purely structural matching, with no match ergonomics
- waffle: a proposal by @WaffleLapkin
- rpjohnst: (TODO) a proposal by @rpjohnst
