tests/snapshots/trace_cli__trace_cli@16802997052617302686.snap
---
source: tests/trace_cli.rs
info: options
---
ref_binding_on_inherited: ResetBindingMode
mut_binding_on_inherited: Keep
inherited_ref_on_ref: EatOuter
allow_ref_pat_on_ref_mut: true
simplify_deref_mut: true
eat_inherited_ref_alone: true
downgrade_shared_inside_shared: false
rules_display_style: Plain
