tests/snapshots/trace_cli__trace_cli@17372775099865300291.snap
---
source: tests/trace_cli.rs
info: "set stateless\nrules"
---
ref_binding_on_inherited: "Error" -> "AllocTemporary"
simplify_expressions: true -> false
The current options can be fully described as the following set of rules.

p0 @ p.0: T0, p1 @ p.1: T1
-------------------------- "Constructor"
[p0, p1] @ p: [T0, T1]

p0 @ &(*p).0: &T0, p1 @ &(*p).1: &T1
------------------------------------ "ConstructorRef"
[p0, p1] @ p: &[T0, T1]

p0 @ &mut (*p).0: &mut T0, p1 @ &mut (*p).1: &mut T1
---------------------------------------------------- "ConstructorRef"
[p0, p1] @ p: &mut [T0, T1]

[p0, p1] @ *p: &T
----------------- "ConstructorMultiRef"
[p0, p1] @ p: &&T

[p0, p1] @ &**p: &T
--------------------- "ConstructorMultiRef"
[p0, p1] @ p: &&mut T

[p0, p1] @ *p: &T
--------------------- "ConstructorMultiRef"
[p0, p1] @ p: &mut &T

[p0, p1] @ &mut **p: &mut T
--------------------------- "ConstructorMultiRef"
[p0, p1] @ p: &mut &mut T

p @ *p: T
---------------------------------- "Deref(EatOuter)"
&p @ p: &T, binding_mode(p) = move

p @ *&p: &T
------------ "Deref(EatOuter)"
&p @ &p: &&T

p @ *&p: &mut T
---------------- "Deref(EatOuter)"
&p @ &p: &&mut T

p @ *&mut p: &T
------------------------ "Deref(EatOuter)"
&mut p @ &mut p: &mut &T

p @ *p: T
------------------------------------------ "Deref(EatOuter)"
&mut p @ p: &mut T, binding_mode(p) = move

p @ *&mut p: &mut T
---------------------------- "Deref(EatOuter)"
&mut p @ &mut p: &mut &mut T

&p @ &*&mut p: &&T
-------------------- "DerefMutWithShared(EatOuter)"
&p @ &mut p: &mut &T

&p @ &*p: &T
-------------------------------------- "DerefMutWithShared(EatOuter)"
&p @ p: &mut T, binding_mode(p) = move

&p @ &*&mut p: &&mut T
------------------------ "DerefMutWithShared(EatOuter)"
&p @ &mut p: &mut &mut T

x @ &p: &T
------------------------------------ "BindingBorrow"
ref x @ p: T, binding_mode(p) = move

x @ &&p: &&T
-------------- "BindingBorrow"
ref x @ &p: &T

x @ &&mut p: &&mut T
---------------------- "BindingBorrow"
ref x @ &mut p: &mut T

x @ &mut p: &mut T
---------------------------------------- "BindingBorrow"
ref mut x @ p: T, binding_mode(p) = move

x @ &mut &p: &mut &T
-------------------- "BindingBorrow"
ref mut x @ &p: &T

x @ &mut &mut p: &mut &mut T
---------------------------- "BindingBorrow"
ref mut x @ &mut p: &mut T

let x: T = p
------------ "Binding"
x @ p: T

let mut x: T = p
------------------------------------ "Binding"
mut x @ p: T, binding_mode(p) = move

let mut x: &T = &p
------------------ "Binding"
mut x @ &p: &T

let mut x: &mut T = &mut p
-------------------------- "Binding"
mut x @ &mut p: &mut T
