tests/snapshots/trace_cli__trace_cli@17515479014605656910.snap
---
source: tests/trace_cli.rs
info: set
---
Error: Syntax is `set option value`.

Options are:
- rules_display_style: Plain | BindingMode
    how to display typing rules (in the `rules` command)
- ref_binding_on_inherited: ResetBindingMode | AllocTemporary | Error
    how to handle a `ref x` binding on an inherited reference
- mut_binding_on_inherited: ResetBindingMode | Keep | Error
    how to handle a `mut x` binding on an inherited reference
- inherited_ref_on_ref: EatOuter | EatInner | EatBoth
    how to handle a reference pattern on a double reference when the outer one is inherited
- allow_ref_pat_on_ref_mut: true | false
    whether to allow `&p: &mut T`
- simplify_deref_mut: true | false
    whether to simplify `*&mut expr`, which removes some borrow errors
- eat_inherited_ref_alone: true | false
    whether `&p: &T` is allowed if the reference is inherited and `T` isn't some `&U`
- downgrade_mut_inside_shared: true | false
    RFC3627 rule 3: downgrade `&mut` inherited references to `&` inside a shared deref

There also exist some predefined option-bundles. Activate one with `set bundle`
- default: the default settings; a reasonable proposal
- permissive: an even more permissive proposal than the default
- restrictive: a restrictive set of rules that accepts very little
- stateless: a proposal that tracks no hidden state; purely type-based
- ergo2024: wip emulation of RFC3627 rules
- stable_rust: emulates the behavior of current stable rust
