tests/snapshots/trace_cli__trace_cli@2559184002348767848.snap
---
source: tests/trace_cli.rs
info: "set restrictive\nset rules_display_style BindingMode\nrules"
---
allow_ref_pat_on_ref_mut: true -> false
eat_inherited_ref_alone: true -> false
mut_binding_on_inherited: "Keep" -> "Error"
ref_binding_on_inherited: "ResetBindingMode" -> "Error"
simplify_deref_mut: true -> false

-p @ *q: T
----------- "Deref(EatOuter)"
-&p @ q: &T

-p @ *q: T
------------------- "Deref(EatOuter)"
-&mut p @ q: &mut T

+p @ *q: T
+-------------------------------- "Deref(EatOuter)"
+&p @ q: &T, q is not a reference

+p @ *&q: &T
+------------ "Deref(EatOuter)"
+&p @ &q: &&T

+p @ *&q: &mut T
+---------------- "Deref(EatOuter)"
+&p @ &q: &&mut T

+p @ *q: T
+---------------------------------------- "Deref(EatOuter)"
+&mut p @ q: &mut T, q is not a reference

+p @ *&mut q: &T
+------------------------ "Deref(EatOuter)"
+&mut p @ &mut q: &mut &T

+p @ *&mut q: &mut T
+---------------------------- "Deref(EatOuter)"
+&mut p @ &mut q: &mut &mut T

-p @ *&*q: T
--------------- "DerefMutWithShared(EatOuter)"
-&p @ q: &mut T

-ref x @ q: T
--------------- "RefBindingResetBindingMode"
-ref x @ &q: &T

-ref x @ q: T
----------------------- "RefBindingResetBindingMode"
-ref x @ &mut q: &mut T

-ref mut x @ q: T
------------------- "RefBindingResetBindingMode"
-ref mut x @ &q: &T

-ref mut x @ q: T
--------------------------- "RefBindingResetBindingMode"
-ref mut x @ &mut q: &mut T

-let mut x: T = q
----------------- "Binding"
-mut x @ q: T

+let mut x: T = q
+---------------------------------- "Binding"
+mut x @ q: T, q is not a reference

rules_display_style: "Plain" -> "BindingMode"

-p @ *q: T
--------------------------------- "Deref(EatOuter)"
-&p @ q: &T, q is not a reference

+p @ *q: T
+---------------------------------- "Deref(EatOuter)"
+&p @ q: &T, binding_mode(q) = move

-p @ *&q: &T
------------- "Deref(EatOuter)"
-&p @ &q: &&T

+p @ reset(q): &T
+---------------------------------- "Deref(EatOuter)"
+&p @ q: &&T, binding_mode(q) = ref

-p @ *&q: &mut T
----------------- "Deref(EatOuter)"
-&p @ &q: &&mut T

+p @ reset(q): &mut T
+-------------------------------------- "Deref(EatOuter)"
+&p @ q: &&mut T, binding_mode(q) = ref

-p @ *q: T
----------------------------------------- "Deref(EatOuter)"
-&mut p @ q: &mut T, q is not a reference

+p @ *q: T
+------------------------------------------ "Deref(EatOuter)"
+&mut p @ q: &mut T, binding_mode(q) = move

-p @ *&mut q: &T
------------------------- "Deref(EatOuter)"
-&mut p @ &mut q: &mut &T

+p @ reset(q): &T
+---------------------------------------------- "Deref(EatOuter)"
+&mut p @ q: &mut &T, binding_mode(q) = ref mut

-p @ *&mut q: &mut T
----------------------------- "Deref(EatOuter)"
-&mut p @ &mut q: &mut &mut T

+p @ reset(q): &mut T
+-------------------------------------------------- "Deref(EatOuter)"
+&mut p @ q: &mut &mut T, binding_mode(q) = ref mut

-x @ &q: &T
----------------------------------- "BindingBorrow"
-ref x @ q: T, q is not a reference

+x @ &q: &T
+------------------------------------ "BindingBorrow"
+ref x @ q: T, binding_mode(q) = move

-x @ &mut q: &mut T
--------------------------------------- "BindingBorrow"
-ref mut x @ q: T, q is not a reference

+x @ &mut q: &mut T
+---------------------------------------- "BindingBorrow"
+ref mut x @ q: T, binding_mode(q) = move

-let mut x: T = q
----------------------------------- "Binding"
-mut x @ q: T, q is not a reference

+let mut x: T = q
+------------------------------------ "Binding"
+mut x @ q: T, binding_mode(q) = move

The current options can be fully described as the following set of rules.

p0 @ q.0: T0,  p1 @ q.1: T1
--------------------------- "Constructor"
[p0, p1] @ q: [T0, T1]

p0 @ &(*q).0: &T0,  p1 @ &(*q).1: &T1
------------------------------------- "ConstructorRef"
[p0, p1] @ q: &[T0, T1]

p0 @ &mut (*q).0: &mut T0,  p1 @ &mut (*q).1: &mut T1
----------------------------------------------------- "ConstructorRef"
[p0, p1] @ q: &mut [T0, T1]

[p0, p1] @ *q: &T
----------------- "ConstructorMultiRef"
[p0, p1] @ q: &&T

[p0, p1] @ &**q: &T
--------------------- "ConstructorMultiRef"
[p0, p1] @ q: &&mut T

[p0, p1] @ *q: &T
--------------------- "ConstructorMultiRef"
[p0, p1] @ q: &mut &T

[p0, p1] @ &mut **q: &mut T
--------------------------- "ConstructorMultiRef"
[p0, p1] @ q: &mut &mut T

p @ *q: T
---------------------------------- "Deref(EatOuter)"
&p @ q: &T, binding_mode(q) = move

p @ reset(q): &T
---------------------------------- "Deref(EatOuter)"
&p @ q: &&T, binding_mode(q) = ref

p @ reset(q): &mut T
-------------------------------------- "Deref(EatOuter)"
&p @ q: &&mut T, binding_mode(q) = ref

p @ *q: T
------------------------------------------ "Deref(EatOuter)"
&mut p @ q: &mut T, binding_mode(q) = move

p @ reset(q): &T
---------------------------------------------- "Deref(EatOuter)"
&mut p @ q: &mut &T, binding_mode(q) = ref mut

p @ reset(q): &mut T
-------------------------------------------------- "Deref(EatOuter)"
&mut p @ q: &mut &mut T, binding_mode(q) = ref mut

x @ &q: &T
------------------------------------ "BindingBorrow"
ref x @ q: T, binding_mode(q) = move

x @ &mut q: &mut T
---------------------------------------- "BindingBorrow"
ref mut x @ q: T, binding_mode(q) = move

let x: T = q
------------ "Binding"
x @ q: T

let mut x: T = q
------------------------------------ "Binding"
mut x @ q: T, binding_mode(q) = move
